<resources>
    <string name="app_name">C-ma</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="setup">Setup</string>
    <string name="welcome_text">Welcome to C-ma</string>

    <string name="monitor">Monitor Your Crops!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_market">Market Prices</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_helpline">Helpline</string>
    <string name="title_cropping">Crops And Land</string>

    <string name="weather">Weather</string>
    <string name="recent_alerts">Recent Alerts</string>

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">2bd39cbef16c2859140b7e42d5c5f80c</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
