<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/helpline"
        android:icon="@drawable/ic_action_dialer"
        android:title="@string/title_helpline"/>

    <item
        android:id="@+id/crops"
        android:icon="@drawable/ic_action_crops"
        android:title="@string/title_cropping"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/market_prices"
        android:icon="@drawable/ic_action_rupee"
        android:title="@string/title_market"/>

    <item
        android:id="@+id/alerts"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alerts"/>

</menu>
